// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link renders children 1`] = `
<a>
  <h3>
    some text
  </h3>
</a>
`;

exports[`Link renders with attribute download 1`] = `
<a
  download={true}
/>
`;

exports[`Link renders with data-attribute 1`] = `
<a
  data-attribute="atribute"
/>
`;

exports[`Link renders with default props 1`] = `<a />`;

exports[`Link renders with rel 1`] = `
<a
  rel="noopener"
>
  <h3>
    No opener
  </h3>
</a>
`;
